# OOP

./: .gitignore  README.md  lab1.pro
inc/: linkage.h  mainwindow.h  mesh_actions.h  scene.h  transforms.h  ui_mainwindow.h  vec.h  vertex.h
lab1/: Makefile  lab1.pro  ryr.txt
lab1/forms/: mainwindow.ui
lab1/inc/: common.h  error_processor.h  linkage.h  linkages.h  mainwindow.h  mesh.h  mesh_actions.h  scene.h  transforms.h  ui_mainwindow.h  vec.h  vertex.h  vertices.h
lab1/lab1-C/: makefile  test.cpp
lab1/lab1-C/inc/: mesh.h
lab1/lab1-C/src/: main.c  mesh.c
lab1/lab1-window/: Makefile  lab1-window.pro  lab1.pro
lab1/lab1-window/forms/: mainwindow.ui
lab1/lab1-window/inc/: mainwindow.h  ui_mainwindow.h  viewport.h
lab1/lab1-window/src/: mainwindow.cpp  (+1 more)
lab1/meshes/: lo.msh  maxwell.msh  obj_to_msh.py
lab1/src/: error_processor.cpp  linkage.cpp  linkages.cpp  mainwindow.cpp  mesh.cpp  mesh_actions.cpp  scene.cpp  transforms.cpp  vertex.cpp  vertices.cpp
lab2/: CMakeLists.txt  ConstTreeIterator.hpp  abober.dot  test  test.cpp  tree_ideas.txt  МИНИРЫР.ТХТ
lab2/include/: AVLTree.hpp  AVLTree_impl.hpp  BSTree.hpp  BSTree_impl.hpp  BaseBinaryTree.h  BaseBinaryTree.hpp  BaseIterator.h  BaseTree.hpp  BaseTreeIterator.h  BaseTreeIterator.hpp  BaseTreeIterator_impl.hpp  BaseTreeNode.h  BaseTreeNode.hpp  BinarySearchTree.h  BinarySearchTree.hpp  BinarySearchTree_impl.hpp  ConstIterator.h  ConstIterator.hpp  ConstTreeIterator.h  ConstTreeIterator.hpp  ConstTreeIterator_impl.hpp  Errors.h  Errors.hpp  ReverseTreeIterator.hpp  ReverseTreeIterator_impl.hpp  TreeIterator.h  TreeIterator.hpp  TreeIterator_impl.hpp  TreeNode.h  TreeNode.hpp  TreeNode_impl.hpp  common.h  common.hpp
lab2/src/: main.cpp
lab3/: CMakeLists.txt  find_path.py  obj_to_msh.py  replace.py
lab3/data/: maxwell.txt
lab3/lib/actions/: BaseAction.cpp  BaseAction.h  CameraAction.cpp  CameraAction.h  ModelAction.cpp  ModelAction.h  ModelsAction.cpp  ModelsAction.h  SceneAction.cpp  SceneAction.h
lab3/lib/adapters/: BaseAdapter.h
lab3/lib/adapters/camera/: CameraAdapter.h  TransformCameraAdapter.cpp  TransformCameraAdapter.h
lab3/lib/adapters/composite/: CompositeAdapter.h  DrawCompositeAdapter.cpp  DrawCompositeAdapter.h  TransformCompositeAdapter.cpp  TransformCompositeAdapter.h
lab3/lib/adapters/model/: DrawCarcassModelAdapter.cpp  DrawCarcassModelAdapter.h  ModelAdapter.h  TransformCarcassModelAdapter.cpp  TransformCarcassModelAdapter.h
lab3/lib/drawer/: AbstractFactory.h  BaseDrawer.h  DrawerSolution.h  DrawerSolution.hpp  QtDrawer.cpp  QtDrawer.h  QtFactory.cpp  QtFactory.h
lab3/lib/exceptions/: Exceptions.h
lab3/lib/facade/: Facade.cpp  Facade.h
lab3/lib/load/builders/: BaseBuilder.h
lab3/lib/load/builders/camera/: BaseCameraBuilder.h  CameraBuilder.cpp  CameraBuilder.h
lab3/lib/load/builders/model/: BaseModelBuilder.h  ModelBuilder.cpp  ModelBuilder.h
lab3/lib/load/builders/scene/: BaseSceneBuilder.h  SceneBuilder.cpp  SceneBuilder.h
lab3/lib/load/directors/: BaseDirector.h
lab3/lib/load/directors/camera/: BaseCameraDirector.h  FileCameraDirector.cpp  FileCameraDirector.h
lab3/lib/load/directors/loader/: BaseLoader.cpp  BaseLoader.h  FileCarcassModelLoader.cpp  FileCarcassModelLoader.h
lab3/lib/load/directors/model/: BaseModelDirector.h  FileModelDirector.cpp  FileModelDirector.h  LoadModelDirector.cpp  LoadModelDirector.h
lab3/lib/load/directors/scene/: BaseSceneDirector.h  FileSceneDirector.cpp  FileSceneDirector.h
lab3/lib/load/moderators/: BaseLoadModerator.cpp  BaseLoadModerator.h
lab3/lib/load/moderators/camera/: CameraLoadModerator.cpp  CameraLoadModerator.h
lab3/lib/load/moderators/creators/: CameraLoadModeratorCreator.cpp  CameraLoadModeratorCreator.h  ModelLoadModeratorCreator.cpp  ModelLoadModeratorCreator.h  ModeratorSolution.h  SceneLoadModeratorCreator.cpp  SceneLoadModeratorCreator.h
lab3/lib/load/moderators/model/: ModelLoadModerator.cpp  ModelLoadModerator.h
lab3/lib/load/moderators/scene/: SceneLoadModerator.cpp  SceneLoadModerator.h
lab3/lib/managers/: BaseManager.h
lab3/lib/managers/creators/: DrawManagerCreator.cpp  DrawManagerCreator.h  LoadManagerCreator.cpp  LoadManagerCreator.h  ManagerSolution.h  SceneManagerCreator.cpp  SceneManagerCreator.h  TransformManagerCreator.cpp  TransformManagerCreator.h
lab3/lib/managers/draw/: DrawManager.cpp  DrawManager.h
lab3/lib/managers/load/: LoadManager.cpp  LoadManager.h
lab3/lib/managers/scene/: SceneManager.cpp  SceneManager.h
lab3/lib/managers/transform/: TransformManager.cpp  TransformManager.h
lab3/lib/matrix/: BaseTransformer.h  TransformMatrix.cpp  TransformMatrix.h  TransformMatrix4.h  Transformer.cpp  Transformer.h
lab3/lib/matrix/matrix/: matrix.h  matrix.hpp  matrix_base.hpp
lab3/lib/objects/: BaseObject.cpp  BaseObject.h  Composite.cpp  Composite.h
lab3/lib/objects/invisibleobject/: Camera.cpp  Camera.h  InvisibleObject.cpp  InvisibleObject.h
lab3/lib/objects/visibleobject/: BaseModel.cpp  BaseModel.h  VisibleObject.cpp  VisibleObject.h
lab3/lib/objects/visibleobject/carcassmodel/: CarcassModel.cpp  CarcassModel.h  Edge.cpp  Edge.h  Mesh.cpp  Mesh.h  Vertex.cpp  Vertex.h
lab3/lib/scene/: Scene.cpp  Scene.h
lab3/src/: main.cpp  mainwindow.cpp  mainwindow.h
lab3/ui/: mainwindow.ui
lab3/uml/: .$lab3.drawio.bkp  .$lab3.drawio.dtmp  .$lab3.drawio_1.dtmp  lab3.drawio
lab4/: .gitignore  CMakeLists.txt
lab4/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
lab4/lib/: defines.hpp
lab4/lib/button/: Button.cpp  Button.hpp
lab4/lib/cabin/: Cabin.cpp  Cabin.hpp
lab4/lib/controller/: Controller.cpp  Controller.hpp
lab4/lib/doors/: Doors.cpp  Doors.hpp
lab4/lib/elevator/: Elevator.cpp  Elevator.hpp
lab4/uml/: .$diagram.drawio.bkp  .$diagram.drawio.dtmp  .$diagram.drawio_1.dtmp  diagram.drawio
lab5/: .$diagram.drawio.bkp  .$diagram.drawio_1.dtmp  .$diagram.drawio_2.dtmp  .$diagram.drawio_3.dtmp  .$diagram.drawio_4.dtmp  .$Мультиварка.drawio.bkp  .$Мультиварка.drawio.dtmp  diagram.drawio
src/: error_processor.cpp  mesh.cpp  scene.cpp
(+23 files in other folders)
